Please see http://www.poissonboltzmann.org/pdb2pqr/release-history

# These are notes for the current version of PDB2PQR

- NEW FEATURES
  * Added Swanson force field based on Swanson et al paper (http://dx.doi.org/10.1021/ct600216k).
  * Modified printAtoms() method. Now "TER" is printed at the end of every chain.

- BUG FIXES
  * Fixed a minor bug: when starting pka.py from pdb2pka directory using command like "python pka.py [options] inputfile", we need to make sure scriptpath does not end with "/".
  * Fixed a bug which caused "coercing to Unicode: need string or buffer, instance found" when submitting PDB2PQR jobs with user-defined force fields on Opal based web server. 
  * Fixed a bug in main_cgi.py, now Opal-based PDB2PQR jobs should also be logged in usage.txt file.